Added mobile responsive homepage

--- a/src/styles/aboutMe.css
+++ b/src/styles/aboutMe.css
@@ -9,7 +9,7 @@
 .aboutMeLabel
 {
     text-align: center;
-    padding-top: 80px;
+    padding-top: 15vh;
     font-family: 'Titillium Web', sans-serif;
     font-size: 1.5em;
     letter-spacing: 3px;
