--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -2,6 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400&display=swap');
 
 
+#homepageContainer
+{
+    height: 100vh !important;
+}
+
 #nextPageContainer
 {
     position: absolute;
@@ -201,8 +206,7 @@
     margin: auto;
     width :34px;
     height: 55px;
-    margin-top: 9.5%;
-    margin-bottom: 2%;
+    margin-top: 20vh;
   }
   .mousey {
     width: 3px;
@@ -231,24 +235,93 @@
 
   
 @media only screen and (max-width: 600px) {
+
+    #nameContainer
+    {
+        margin-top: 30%;
+    }
     #giantName{
-       margin-top: 20%;
-       line-height: 100%;
+       line-height: 20px;
+    }
+
+    #nextPageContainer
+    {
+        visibility: hidden;
     }
 
     #nameDesc
     {
-    font-size: 1.4em;
-    margin-top: 5%;
+        font-size: 1.2em;
+        margin-top: 15%;
     }
 
     hr{
         width: 95%;
+    }
+    #descriptionContainer
+    {
+        margin-top: 20%;
+        font-size: 1em;
+        margin-right: 10%;
+    }
+    #funnyQuote
+    {
+        padding-top: 20%;
+        font-size: 1em;
     }
     #cvContainer
     {
         margin-top: 10%;
         margin-bottom: 20%;
         margin-left: 25%;
+    }
+    .scroll-downs
+    {
+        visibility: hidden;
+    }
+    .aboutMeSecondaryContainer
+    {
+        flex-direction: column-reverse;
+    }
+    .aboutMeSecondaryContainer .infoContainer
+    {
+        margin-right: 10%;
+        text-align: center;
+    }
+    .infoContainerButtons
+    {
+        margin-top: 50px;
+    }
+    .whiteOutlinedButton
+    {
+        margin-top: 10px !important; 
+    }
+    .interestBlock .inner
+    {
+        margin: 3px;
+    }
+    .languagesLabelTitle
+    {
+        padding-top: 60%;
+    }
+
+    .languagesSecondaryContainer
+    {
+        width: 100%;
+        padding-bottom: 40%;
+    }
+    .languagesLabel
+    {
+        text-align: center;
+    }
+    .languageContainer
+    {
+        display: block;
+        text-align: center;
+    }
+    .languageContainer i
+    {
+        display: inline-block;
+        margin: 10px;
     }
 }
