Updated Contact me page

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -60,6 +60,10 @@
     
 }
 
+.css-i44wyl
+{
+    padding: 10px !important;
+}
 .css-igs3ac
 {
     border-color: white !important;
@@ -68,7 +72,7 @@
 
 .css-p0rm37
 {
-    padding: 8px;
+    padding: 10px !important;
 }
 
 .css-1d3z3hw-MuiOutlinedInput-notchedOutline
