General adjustments and modifies to projects descriptions

--- a/src/styles/aboutMe.css
+++ b/src/styles/aboutMe.css
@@ -21,7 +21,7 @@
 .aboutMeSecondaryContainer
 {
     display: flex;
-    margin-top: 5%;
+    margin-top: 50px;
     padding-bottom: 8%;
     font-family: 'Titillium Web', sans-serif;
 }
