--- a/src/styles/mobileResponsive.css
+++ b/src/styles/mobileResponsive.css
@@ -89,6 +89,16 @@
         text-align: center;
         width: 80%;
         margin: 0 auto;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .languageBox
+    {
+        text-align: center;    
+        flex-grow: 1;
+        flex: 1 0 33%;
+        padding: 10px;
     }
     .languageContainer i
     {
