--- a/src/styles/aboutMe.css
+++ b/src/styles/aboutMe.css
@@ -112,3 +112,22 @@
     box-shadow: 0px 6px 10px rgb(1, 1, 1);
 }
 
+.MuiDialog-paper
+{
+    width: 80%;
+    background-color: rgba(34, 42, 53, 0.1) !important;
+    width: 35% !important;
+    max-width: none !important;
+}
+
+.MuiDialog-container
+{
+    backdrop-filter: blur(5px);
+}
+
+
+.dialogContent
+{
+    width: 100%;
+}
+
