--- a/src/styles/aboutMe.css
+++ b/src/styles/aboutMe.css
@@ -37,7 +37,9 @@
 .descriptionContainer
 {
     flex: 2;
-    margin-top: 50px;
+    margin-top: 30px;
+    line-height: 2;
+    font-size: 18px;
 }
 
 .infoContainerButtons
