--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -12,7 +12,7 @@
     position: absolute;
     right: 0;
     margin-right: 5%;
-    margin-top: 23%;
+    margin-top: 15%;
 }
 
 #nextPageContainer p
@@ -23,18 +23,15 @@
 
 #giantName{
     font-size: 100px;
-    color: white;
-    font-family: 'Titillium Web', sans-serif;
+    font-weight: 500;
     text-align: left;
-    font-weight: 600;
     width: fit-content;
-    margin-bottom: 0px;
-    margin-top: 25%;
 
 }
 
 #nameContainer
 {
+    margin-top: 8%;
     margin-left: 10%;
     width: fit-content;
 }
@@ -53,13 +50,13 @@
     font-family: 'Titillium Web', sans-serif;
     text-align: left;
     width: fit-content;
-    margin: 0%;
+    margin-top: -20px;
     padding-left: 10px;
 }
 
 #nameDesc span
 {
-    color: #ff6600
+    color: rgb(188, 188, 188)
 }
 
 #descriptionContainer
@@ -67,7 +64,7 @@
     margin-top: 5%;
     margin-left: 10%;
     font-size: 20px;
-    color: rgba(233, 233, 233, 0.867);
+    color: rgba(255, 255, 255, 0.867);
 }
 
 #descriptionContainer p
@@ -90,6 +87,7 @@
     padding-top: 5%;
     font-size: 20px;
     font-style: italic;
+    color: #b1b1b1d3;
 }
 
 .underlineCustomOrange
@@ -255,6 +253,16 @@
     background-color: #fff;
     animation-name: scroll;
     animation-duration: 2.2s;
+    animation-timing-function: cubic-bezier(.15,.41,.69,.94);
+    animation-iteration-count: infinite;
+  }
+  .scrollerText {
+    width: 120px;
+    height: 8px;
+    margin-top: 25px;
+    margin-left: -38px;
+    animation-name: scroll;
+    animation-duration: 5s;
     animation-timing-function: cubic-bezier(.15,.41,.69,.94);
     animation-iteration-count: infinite;
   }
