--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -31,10 +31,24 @@
 .cardBoxContainer
 {
     margin-top: 40px;
+    
 }
 .cardBox
 {
     display: inline-block;
     margin-left: 20px;
     border-radius: 0.2rem;
+    
+}
+.projectCard
+{
+    color: white !important;
+    background-color: rgba(24,26,28,255) !important;
+    
+    box-shadow: rgba(77, 77, 77, 0.2) 0px 2px 8px 0px !important;
+}
+.projectCardText
+{
+    color: rgb(169, 169, 169) !important;
+    font-size: 90% !important;
 }
