--- a/src/styles/mobileResponsive.css
+++ b/src/styles/mobileResponsive.css
@@ -6,7 +6,7 @@
         margin-top: 30%;
     }
     #giantName{
-       line-height: 20px;
+       line-height: 90%;
     }
 
     #nextPageContainer
@@ -17,7 +17,7 @@
     #nameDesc
     {
         font-size: 1.2em;
-        margin-top: 15%;
+        margin-top: 10%;
     }
 
     hr{
@@ -134,12 +134,23 @@
     {
         margin-top: 30%;
         width: 100%;
-        margin-bottom: 30%;
     }
+    .ContactMeInputText
+    {width: 100%;}
+
     .ContactMeDescription
     {
         width: 90%;
         margin: 0 auto;
+    }
+    .interestBlock
+    {
+        width: 30%;
+        margin: 10px;
+    }
+    .interestBlock img
+    {
+        width: 60%;
     }
     .contactSubmitButton
     {
@@ -150,7 +161,14 @@
         margin-top: 20%;
         width: 100%;
     }
-
+    .MuiDialog-paper
+    {
+        width: 80%!important;
+    }
+    .coversContainer
+    {
+        display: block !important;
+    }
     /* P5.JS PROJECTS */
 
     .projectContainer
